# interface_library_example

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  allTheIppFiles.cpp  allTheIppFiles.hpp  hello.hpp  hello.ipp
